feat: add get and post endpoints for weather cards (get all, save)

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,3 +1,19 @@
 api:
   geocoding: "https://geocoding-api.open-meteo.com/v1/search"
   weather: "https://api.open-meteo.com/v1/forecast"
+
+spring:
+  datasource:
+    url: "jdbc:postgresql://localhost:5432/umbrella"
+    username: ${USERNAME}
+    password: ${PASSWORD}
+  jpa:
+    hibernate:
+      ddl-auto: "create-drop"
+
+    show-sql: "true"
+    properties:
+      hibernate:
+        format_sql: "true"
+        dialect: "org.hibernate.dialect.PostgreSQLDialect"
+
