refactor: move api call of OpenAI to backend
refactor: modify path and test message of OpenAI endpoint

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,8 +29,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "server": "json-server -H 0.0.0.0 --watch db.json --port 5000"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
