--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -5,7 +5,10 @@ api:
   reverseGeocoding: "https://nominatim.openstreetmap.org/reverse?format=json&zoom=10&accept-language=en"
   time: "https://www.timeapi.io/api/Time/current/coordinate"
   weatherForecastSpecificDay: "https://api.open-meteo.com/v1/forecast?daily=weathercode,temperature_2m_max,temperature_2m_min,windspeed_10m_max&timezone=Europe/Berlin"
+  openAI: "https://api.openai.com/v1/completions"
 
+token:
+  openAIToken: "Bearer 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"
 
 spring:
   datasource:
